Bug 256564 - editing/selection/ios/hide-selection-in-hidden-contenteditable.html fails with a text diff
Summary: editing/selection/ios/hide-selection-in-hidden-contenteditable.html fails wit...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Tools / Tests (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Wenson Hsieh
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-05-09 17:17 PDT by Wenson Hsieh
Modified: 2023-05-09 20:00 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Wenson Hsieh 2023-05-09 17:17:46 PDT
rdar://107724393
Comment 1 Wenson Hsieh 2023-05-09 17:34:56 PDT
Pull request: https://github.com/WebKit/WebKit/pull/13674
Comment 2 EWS 2023-05-09 20:00:43 PDT
Committed 263891@main (91f212cfd96f): <https://commits.webkit.org/263891@main>

Reviewed commits have been landed. Closing PR #13674 and removing active labels.